adds styling for a completed day

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,11 @@
  .force-pointer {
    cursor: pointer;
  }
+
+.completed-day {
+  background-color: blue;
+  height: 3em;
+  width: 3em;
+  border-radius: 50%;
+  line-height: 3em;
+}
