--- a/app/views/layouts/statics.html.erb
+++ b/app/views/layouts/statics.html.erb
@@ -14,6 +14,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'app' %>
+
+    <script>
+      window.SERVER_DOMAIN = "<%= ENV['HABIT_TRACKER_HOST'] %>";
+    </script>
   </head>
 
   <body>
