simpler way of passing the domain url to the client

--- a/app/views/layouts/statics.html.erb
+++ b/app/views/layouts/statics.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_pack_tag 'app' %>
 
     <script>
-      window.SERVER_DOMAIN = "<%= ENV['HABIT_TRACKER_HOST'] %>";
+      window.SERVER_DOMAIN = "<%= root_url %>";
     </script>
   </head>
 
