--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -41,3 +41,13 @@
     width: 75%;
   }
 }
+
+html {
+
+  @media (max-width: 992px) {
+    font-size: 2rem;
+  }
+
+  @media (max-width: 1000px) {
+  }
+}
