--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -36,3 +36,8 @@
   opacity: .3;
   cursor: default;
 }
+html , body {
+  // @media (-webkit-min-device-pixel-ratio: 2) {
+  //   font-size: 1.5em;
+  // }
+}
