--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -16,7 +16,9 @@
 }
 
 .day-completed {
-  background-color: yellow;
+  background-color: white;
+  border-color: white;
+  color: black;
 }
 
 .z-level-1 {
