--- a/app/assets/stylesheets/slate-theme.scss
+++ b/app/assets/stylesheets/slate-theme.scss
@@ -2642,13 +2642,13 @@ fieldset:disabled a.btn {
 .btn-secondary {
   color: #fff;
   background-color: #7A8288;
-  border-color: #7A8288;
+  // border-color: #7A8288;
 }
 
 .btn-secondary:hover {
   color: #fff;
   background-color: #686f74;
-  border-color: #62686d;
+  // border-color: #62686d;
 }
 
 .btn-secondary:focus, .btn-secondary.focus {
@@ -10666,16 +10666,16 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-secondary {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#8a9196), color-stop(60%, #7A8288), to(#70787d));
-  background-image: linear-gradient(#8a9196, #7A8288 60%, #70787d);
+  // background-image: -webkit-gradient(linear, left top, left bottom, from(#8a9196), color-stop(60%, #7A8288), to(#70787d));
+  // background-image: linear-gradient(#8a9196, #7A8288 60%, #70787d);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
 }
 
 .btn-secondary:not([disabled]):not(.disabled):hover, .btn-secondary:not([disabled]):not(.disabled):focus, .btn-secondary:not([disabled]):not(.disabled):active, .btn-secondary:not([disabled]):not(.disabled).active {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#4e5458), color-stop(40%, #565b60), to(#5b6165));
-  background-image: linear-gradient(#4e5458, #565b60 40%, #5b6165);
+  // background-image: -webkit-gradient(linear, left top, left bottom, from(#4e5458), color-stop(40%, #565b60), to(#5b6165));
+  // background-image: linear-gradient(#4e5458, #565b60 40%, #5b6165);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
