more pastel-like colors

--- a/app/assets/stylesheets/slate-theme.scss
+++ b/app/assets/stylesheets/slate-theme.scss
@@ -5496,7 +5496,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .alert-success {
   color: #336633;
-  background-color: #e0f3e0;
+  background-color: #68965a;
   border-color: #d3eed3;
 }
 
@@ -5538,7 +5538,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 
 .alert-danger {
   color: #7c312f;
-  background-color: #fcdfde;
+  background-color: #98544e;
   border-color: #fad2d1;
 }
 
@@ -10991,7 +10991,7 @@ legend {
 }
 
 .alert-success {
-  background-color: #62c462;
+  background-color: #719d7c;
 }
 
 .alert-info {
@@ -11003,7 +11003,7 @@ legend {
 }
 
 .alert-danger {
-  background-color: #ee5f5b;
+  background-color: #9e6c63;
 }
 
 .alert-light {
