--- a/app/assets/stylesheets/slate-theme.scss
+++ b/app/assets/stylesheets/slate-theme.scss
@@ -6974,7 +6974,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #272B30 !important;
+  background-color: #22252a !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
