--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -43,3 +43,13 @@
 .light-grey {
   color: #747474;
 }
+
+.fa-chevron-circle-left {
+  position: relative;
+  left: 15px;
+
+}
+.fa-chevron-circle-right {
+  position: relative;
+  right: 15px;
+}
